# skepu-headers

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  skepu2.hpp
CMake/: skepu-headers-options.cmake  skepu-headersConfig.cmake.in
skepu2/: map.hpp  mappairs.hpp  mapreduce.hpp  matrix.hpp  reduce.hpp  tensor.hpp  vector.hpp
skepu2/backend/: benchmark.h  call.h  debug.h  device_mem_pointer_cl.h  map.h  mapoverlap.h  mappairs.h  mapreduce.h  reduce.h  scan.h  skepu_opencl_helpers.h
skepu2/backend/impl/: environment.inl
skepu2/backend/impl/mappairs/: mappairs_cpu.inl  mappairs_omp.inl
skepu2/backend/impl/matrix/: matrix.inl  matrix_cl.inl  matrix_cu.inl  matrix_sequential.inl
skepu2/backend/impl/tensor/: tensor_iterator.inl
skepu2/backend/impl/vector/: vector.inl  vector_cl.inl  vector_cu.inl
skepu2/cluster/: access_mode.hpp  cluster.hpp  cluster_fake.hpp  cluster_meta_helpers.hpp  container_cut.hpp  cut_structure.hpp  handle_cut.hpp  handle_modes.hpp  helpers.hpp  index.hpp  map.hpp  mat.hpp  matrix.hpp  matrix_container_iterator.hpp  matrix_iterator.hpp  multivariant_task.hpp  reduce1d.hpp  reduce_mode.hpp  starpu_matrix_container.hpp  starpu_var.hpp  task_creator.hpp  task_schedule_wrapper.hpp  vec.hpp  vector.hpp  vector_iterator.hpp
skepu2/cluster/impl/: container_cut.inl  cut_structure.inl  handle_cut.inl  handle_modes.inl  helpers.inl  index.inl  map.inl  mat.inl  matrix.inl  matrix_container_iterator.inl  matrix_iterator.inl  multivariant_task.inl  reduce1d.inl  starpu_matrix_container.inl  starpu_var.inl  task_creator.inl  task_schedule_wrapper.inl
skepu2/impl/: common.hpp  meta_helpers.hpp
skepu3/: call.hpp  map.hpp  mapoverlap.hpp  mapreduce.hpp  matrix.hpp  vector.hpp
skepu3/backend/: bandwidthMeasure.h  benchmark.h  device_allocations_cu.h  device_cl.h  device_cu.h  device_mem_pointer_cl.h  globals.h  hybrid_tuner.h  malloc_allocator.h  map.h  mapoverlap.h  mapreduce.h  mem_pointer_base.h  reduce_helpers.h  scan.h  skeleton_base.h  skepu_opencl_helpers.h
skepu3/backend/impl/: environment.inl
skepu3/backend/impl/call/: call_omp.inl
skepu3/backend/impl/map/: map_cpu.inl  map_cu.inl
skepu3/backend/impl/mapoverlap/: mapoverlap_omp.inl
skepu3/backend/impl/mappairs/: mappairs_cpu.inl  mappairs_omp.inl
skepu3/backend/impl/matrix/: matrix.inl  matrix_iterator.inl  matrix_proxy.inl  matrix_transpose.inl
skepu3/backend/impl/reduce/: reduce_cl.inl  reduce_hy.inl  reduce_omp.inl
skepu3/backend/impl/scan/: scan_cu.inl  scan_omp.inl
skepu3/backend/impl/sparse_matrix/: sparse_matrix.inl  sparse_matrix_iterator.inl
skepu3/backend/impl/tensor/: tensor_iterator.inl
skepu3/backend/impl/vector/: vector_cl.inl
skepu3/cluster/: cluster.hpp  cluster_fake.hpp  container_cut.hpp  cut_structure.hpp  mat.hpp  matrix.hpp  matrix_iterator.hpp  multivariant_task.hpp  reduce1d.hpp  reduce_mode.hpp  starpu_matrix_container.hpp  starpu_var.hpp  vector_iterator.hpp
skepu3/cluster/impl/: container_cut.inl  cut_structure.inl  helpers.inl  index.inl  map.inl  matrix.inl  matrix_iterator.inl  multivariant_task.inl  reduce1d.inl  starpu_matrix_container.inl  starpu_var.inl
skepu3/impl/: timer.hpp
src/: skepu
src/skepu-lib/: blas.hpp  complex.hpp  filter.hpp  io.hpp  operators.hpp  util.hpp
src/skepu3/: call.hpp  map.hpp  mapoverlap.hpp  mappairs.hpp  mappairsreduce.hpp  maprandom.hpp  maprandomoverlap.hpp  maprandomreduce.hpp  mapreduce.hpp  maptuple.hpp  matrix.hpp  reduce.hpp  scan.hpp  sparse_matrix.hpp  tensor.hpp  vector.hpp
src/skepu3/backend/: benchmark.h  call.h  debug.h  device_mem_pointer_cl.h  device_mem_pointer_cu.h  environment.h  helper_methods.h  hybrid_tuner.h  map.h  mapoverlap.h  mappairs.h  mappairsreduce.h  mapreduce.h  reduce.h  scan.h  skeleton_base.h  skepu_cuda_helpers.h  skepu_opencl_helpers.h  tuner.h
src/skepu3/backend/impl/: device_allocations_cu.inl  environment.inl
src/skepu3/backend/impl/call/: call_cl.inl  call_cpu.inl  call_cu.inl  call_omp.inl
src/skepu3/backend/impl/map/: map_cl.inl  map_cpu.inl  map_cu.inl  map_hy.inl  map_omp.inl
src/skepu3/backend/impl/mapoverlap/: mapoverlap_cl.inl  mapoverlap_cpu.inl  mapoverlap_cu.inl  mapoverlap_hy.inl  mapoverlap_omp.inl
src/skepu3/backend/impl/mappairs/: mappairs_cl.inl  mappairs_cpu.inl  mappairs_cu.inl  mappairs_omp.inl
src/skepu3/backend/impl/mappairsreduce/: mappairsreduce_cl.inl  (+3 more)
src/skepu3/cluster/: access_mode.hpp  cluster.hpp  cluster_fake.hpp  common.hpp  external.hpp  flush_mode.hpp  handle_cut.hpp  handle_modes.hpp  helpers.hpp  index.hpp  map.hpp  matrix.hpp  matrix_container_iterator.hpp  multivariant_task.hpp  starpu_matrix_container.hpp  starpu_var.hpp  task_creator.hpp  task_schedule_wrapper.hpp  vec.hpp  vector.hpp
src/skepu3/cluster/containers/: partition.hpp  proxies.hpp
src/skepu3/cluster/impl/: handle_cut.inl  handle_modes.inl  map.inl  mat.inl  matrix.inl  matrix_container_iterator.inl  multivariant_task.inl  reduce1d.inl  starpu_matrix_container.inl  task_creator.inl  task_schedule_wrapper.inl
src/skepu3/cluster/skeletons/: map.hpp  mapreduce.hpp  scan.hpp  skeleton_base.hpp  skeleton_task.hpp  skeleton_utils.hpp  task_helpers.hpp
src/skepu3/impl/: backend.hpp  common.hpp  execution_model.hpp  external.hpp  meta_helpers.hpp  random.hpp  region.hpp  stride_list.hpp
tests/: CMakeLists.txt
tests/catch2_main/: CMakeLists.txt
tests/map/: CMakeLists.txt  starpu_map.cpp  starpu_map.cu  starpu_mapoverlap_1d.cpp  starpu_mapoverlap_2d.cpp  starpu_mapoverlap_3d.cpp  starpu_mapoverlap_4d.cpp  starpu_mappairs.cpp  starpu_mappairs.cu  starpu_mappairsreduce.cpp  starpu_mapreduce.cpp
tests/matrix/: CMakeLists.txt  starpu_matrix.cpp
tests/reduce/: CMakeLists.txt  starpu_reduce.cu  starpu_reduce1d_colwise.cpp  starpu_reduce1d_elwise.cpp  starpu_reduce1d_rowwise.cpp  starpu_reduce2d.cpp
tests/scan/: CMakeLists.txt  starpu_scan.cpp
tests/tensor3/: CMakeLists.txt  starpu_tensor3.cpp  starpu_tensor3.hpp
tests/tensor4/: CMakeLists.txt  starpu_tensor4.cpp  starpu_tensor4.hpp
tests/vector/: CMakeLists.txt  starpu_vector.cpp  vector.cpp
(+63 files in other folders)
